# nevermind-neu

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
examples/chess/: main.rs
examples/mnist/: README.md  main.rs
examples/xor/: main.rs
examples/xor_ocl/: main.rs
src/: activation.rs  cpu_params.rs  dataset.rs  err.rs  layer_fabric.rs  layers_storage.rs  learn_params.rs  lib.rs  main.rs  network.rs  ocl.rs  orchestra.rs  solvers.proto
src/bias/: bias.rs  mod.rs
src/dataloader/: databatch.rs  dataloader.rs  mod.rs  protobuf.rs  simple.rs
src/layers/: abstract_layer.rs  abstract_layer_ocl.rs  dummy_layer.rs  error_layer.rs  euclidean_loss_layer.rs  euclidean_loss_layer_ocl.rs  fc_layer.rs  fc_layer_ocl.rs  hidden_layer.rs  input_data_layer.rs  input_layer.rs  input_layer_ocl.rs  mod.rs  softmax_loss_layer.rs  softmax_loss_layer_ocl.rs
src/mind/: abstract_layer.rs  activation.rs  bias.rs  dataset.rs  dummy_layer.rs  error_layer.rs  hidden_layer.rs  input_data_layer.rs  layer_fabric.rs  layers_storage.rs  learn_params.rs  mod.rs  network.rs  solver.rs  solver_helper.rs  solver_rmsprop.rs  solver_sgd.rs  util.rs
src/models/: mod.rs  model_helper.rs  sequential.rs  sequential_ocl.rs
src/optimizers/: mod.rs  optim_adagrad.rs  optim_adam.rs  optim_creator.rs  optim_fabric.rs  optim_ocl.rs  optim_ocl_adam.rs  optim_ocl_fabric.rs  optim_ocl_rms.rs  optim_ocl_sgd.rs  optim_rms.rs  optim_sgd.rs
src/solvers/: mod.rs  solver.rs  solver_creator.rs  solver_helper.rs  solver_rmsprop.rs  solver_sgd.rs
src/util/: activation_ocl.rs  array_helpers.rs  mod.rs  normalize.rs  util.rs  with_params.rs
