[package]
name = "regular_mind"
version = "0.1.0"
edition = "2021"
autoexamples = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "xor"

[[example]]
name = "mnist"

[dependencies]
rand = "0.5"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
#simple-logging = "2.0.2"
env_logger = "0.9.0"
log4rs = "1.1.1"

serde_json = "1.0"
serde_yaml = "0.8"

ndarray = { version = "0.15.0", features = ["rayon"] } # blas feature 
#blas-src = { version = "0.8", features = ["openblas"] }
#openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"

prost = "0.11" # Protobuf for serializing/deserializing net state
prost-types = "0.11"

clap = { version = "3.2.22" }

rust-mnist = "0.1" # TODO : must be an optional build feature

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
log_log4rs = []
log_env_logger = []
default = ["log_env_logger"]

[build-dependencies]
prost-build = "0.11"